--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,13 +8,13 @@ jobs:
     name: Build With Terraform
     runs-on: ubuntu-latest
     env:
-      TF_VAR_tenancy_ocid: ${{secrets.TF_VAR_tenancy_ocid}}
-      TF_VAR_compartment_ocid: ${{secrets.TF_VAR_compartment_ocid}}
-      TF_VAR_user_ocid: ${{secrets.TF_VAR_user_ocid}}
-      TF_VAR_private_key_password: ${{secrets.TF_VAR_private_key_password}}
-      TF_VAR_private_key: ${{secrets.TF_VAR_private_key}}
-      TF_VAR_fingerprint: ${{secrets.TF_VAR_fingerprint}}
-      TF_VAR_region: ${{secrets.TF_VAR_region}}
+      TF_VAR_tenancy_ocid: ${{secrets.tenancy_ocid}}
+      TF_VAR_compartment_ocid: ${{secrets.compartment_ocid}}
+      TF_VAR_user_ocid: ${{secrets.user_ocid}}
+      TF_VAR_private_key_password: ${{secrets.private_key_password}}
+      TF_VAR_private_key: ${{secrets.private_key}}
+      TF_VAR_fingerprint: ${{secrets.fingerprint}}
+      TF_VAR_region: ${{secrets.region}}
       TF_VAR_bucket_name: "gitactions_bucket"
       
     steps:
