--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,13 +8,13 @@ jobs:
     name: Build With Terraform
     runs-on: ubuntu-latest
     env:
-      TF_VAR_tenancy_ocid: ${{secrets.tenancy_ocid}}
-      TF_VAR_compartment_ocid: ${{secrets.compartment_ocid}}
-      TF_VAR_user_ocid: ${{secrets.user_ocid}}
-      TF_VAR_private_key_password: ${{secrets.private_key_password}}
-      TF_VAR_private_key: ${{secrets.private_key}}
-      TF_VAR_fingerprint: ${{secrets.fingerprint}}
-      TF_VAR_region: ${{secrets.region}}
+      TF_VAR_tenancy_ocid: ${{secrets.TENANCY_OCID}}
+      TF_VAR_compartment_ocid: ${{secrets.COMPARTMENT_OCID}}
+      TF_VAR_user_ocid: ${{secrets.USER_OCID}}
+      TF_VAR_private_key_password: ${{secrets.PRIVATE_KEY_PASSWORD}}
+      TF_VAR_private_key: ${{secrets.PRIVATE_KEY}}
+      TF_VAR_fingerprint: ${{secrets.FINGERPRINT}}
+      TF_VAR_region: ${{secrets.REGION}}
       TF_VAR_bucket_name: "gitactions_bucket"
       
     steps:
