--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,7 +11,7 @@ jobs:
       TF_VAR_tenancy_ocid: ${{secrets.TENANCY_OCID}}
       TF_VAR_compartment_ocid: ${{secrets.COMPARTMENT_OCID}}
       TF_VAR_user_ocid: ${{secrets.USER_OCID}}
-      TF_VAR_private_key_password: ${{secrets.PRIVATE_KEY_PASSWORD}}
+      TF_VAR_private_key_path: ${{secrets.PRIVATE_KEY_PATH}}
       TF_VAR_private_key: ${{secrets.PRIVATE_KEY}}
       TF_VAR_fingerprint: ${{secrets.FINGERPRINT}}
       TF_VAR_region: ${{secrets.REGION}}
